added new entity and some other changes

--- a/BooksApp.Web/appsettings.json
+++ b/BooksApp.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Password=Varaguyr.1;Database=MyDatabase9;"
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=;Database=MyDatabase;"
   },
   "JwtOptions": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
