added classes DI

--- a/BooksApp.Web/appsettings.json
+++ b/BooksApp.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Username=postgres;Password=;Database=MyDatabase;"
+    //"DefaultConnection": "Host=localhost;Username=postgres;Password=;Database=MyDatabase;",
+    "DefaultConnection": "Host=localhost;Username=postgres;Password=Varaguyr.1;Database=MyDatabase10;"
   },
   "JwtOptions": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
